feat: prisma context and users query

--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "dependencies": {
     "@apollo/server": "4.10.0",
     "@prisma/client": "5.10.2",
-    "graphql": "16.8.1"
+    "bcryptjs": "2.4.3",
+    "graphql": "16.8.1",
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
+    "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.11.24",
     "prisma": "5.10.2",
     "tsx": "4.7.1",
