--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-DATABASE_URL="mongodb://root:password@localhost:27017/example?authSource=admin&retryWrites=true&w=majority"
+APP_SECRET=
+DATABASE_URL=
