--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apollo/server": "4.10.0",
     "@prisma/client": "5.10.2",
     "bcryptjs": "2.4.3",
+    "dotenv": "16.4.5",
     "graphql": "16.8.1",
     "jsonwebtoken": "9.0.2"
   },
