--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx src/index.ts",
-    "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js",
+    "build": "tsc",
+    "start": "pnpm build && node ./dist/index.js",
     "postinstall": "prisma generate"
   },
   "keywords": [],
@@ -22,7 +22,8 @@
     "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "graphql": "16.8.1",
-    "jsonwebtoken": "9.0.2"
+    "jsonwebtoken": "9.0.2",
+    "nexus": "1.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
