--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "graphql": "16.8.1",
-    "jsonwebtoken": "9.0.2",
-    "nexus": "1.3.0"
+    "jsonwebtoken": "8.5.1",
+    "nexus": "1.3.0",
+    "oslo": "1.1.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
-    "@types/jsonwebtoken": "9.0.6",
+    "@types/jsonwebtoken": "8.5.9",
     "@types/node": "20.11.24",
     "prisma": "5.10.2",
     "tsx": "4.7.1",
